src/App.scss
$lightBlue: rgba(0, 0, 255, 0.6);
$hover-lightBlue: rgba(0, 0, 197, 0.6);

* {
    margin: 0;
    padding: 0;
}

body {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
}

#root {
    position: relative;
    height: 100%;
    overflow: auto;
}

form {
    position: relative;
    padding: 10px;

    .form-content {
        height: 100%;
    }

    .scenario-info {
        display: flex;
        align-items: center;
        padding: 0;
        #basic-info {
            display: block;
            label {
                display: inline-block;
                margin: 10px 5px;
            }

            input[type="text"] {
                width: 300px;
            }
        }

        #secondary-info {
            display: flex;
            align-items: center;
            margin: 0 10px 10px auto;
        }

        #vitals-info {
            display: flex;
            align-items: center;
            #initial, #reassessment{
                p {
                    margin-left: 5px;
                    font-size: 20px;
                }
                .vitals {
                    display: grid;
                    border: 1px gray solid;
                    grid-template-columns: auto auto;

                    input {
                        width: 25px;
                    }
                }
            }
        }

        #sample {
            p {
                margin-left: 5px;
                font-size: 20px;
            }
            .sample-history {
                border: 1px gray solid;
                display: flex;
                flex-direction: column;
            }
        }

        .info-box {
            padding: 7px;
            margin: 0 3px;
            height: 200px;
            overflow: auto;
        }
    }

    label {
        margin: 5px;
        margin-left: auto;
    }

    .check-item {
        margin-left: 12px !important;

        &::before {
            content: "-";
        }
    }

    .sub-item {
        margin-left: 12px !important;
        &::before {
            content: "- -";
        }
    }

    select, input {
        margin: 0 5px;
    }

    fieldset {
        padding: 5px;
        legend {
            font-size: 20px;
            padding: 5px;
        }
    }
    
    .label-input {
        width: 30%;
    }

    #crit-items {
        margin-top: 10px;
        border-color: rgb(220, 120, 120);
    }

    .list-item {
        margin: 5px 0;
    }

    #submit-next {
        position: absolute;
        right: 0;
        bottom: 10px;
    }
}

button {
    height: 35px;
    border: none;
    font-size: 15px;
    color: white;
    background-color: $lightBlue;
    margin: 10px 10px 0 0;
    padding: 0 15px;

    &:hover {
        cursor: pointer;
        background-color: $hover-lightBlue;
    }
}

